@@ -3,8 +3,10 @@
 
 nn-nn-11 - Version 5.1.16
 
-  - Fix for bug 11782297, DBMD.getTables (so thus getColumns too) fails with table names containing dot (like "junk_[Sp:e,c/ C-h+a=.r]").
-  
+  - Fix for Bug#60313 (11890729), bug in com.mysql.jdbc.ResultSetRow.getTimestampFast.
+    Regression test case added to ResultSetRegressionTest tests.
+  - Fix for bug 11782297, DBMD.getTables (so thus getColumns too) fails with table names 
+    containing dot (like "junk_[Sp:e,c/ C-h+a=.r]").
 
 02-08-11 - Version 5.1.15
    - Fix for Bug#38367, parameters metadata did not reflect the fact that NULL is allowed 
